# content-aware-fileserver

./: .gitignore  README.md  main.py  pyproject.toml
docs/: Content-Aware-Fileserver-Projektplan.docx  conventional_commits_standard.md  dependency_choices.md  ocr_setup.md
notebooks/: 01_phase0_first_llm_call.ipynb  02_phase1_json_extraction.ipynb  03_phase1_file_reading.ipynb  04_phase1_document_classification.ipynb  05_phase1_ocr.ipynb  06_phase1_vision_llm.ipynb
