[project]
name = "content-aware-fileserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.3.0",
    "dotenv>=0.9.9",
    "openai>=2.26.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.5",
]
